2000-04-12  Miguel de Icaza  <miguel@gnu.org>

	* main.c (main): Call e_cursors_init.

2000-04-10  Dan Winship  <danw@helixcode.com>

	* mail-ops.c (fetch_mail): use camel_movemail when fetching mail
	from an mbox store. This leaves behind temp files for now,
	because CamelMboxFolder::delete is too confused to use, and NotZed
	is rewriting CamelMboxFolder, so I'm not going to bother to try to
	fix it.

	* mail-ops.c: Add some #includes for the non-HAVE_MKSTEMP case

2000-04-09  Matt Loper  <matt@helixcode.com>

	* folder-browser.c (folder_browser_new): set folder_browser->uri
	to NULL, so that we know when to free it.

2000-04-07  Miguel de Icaza  <miguel@gnu.org>

	* message-list.c (states_pixmaps): Add more beautiful art from
	Miggue, the Diego Rivera of the next millenium.
	(message_list_init_header): Use the beautiful art.

	* pixmaps: Miguel rediscovers the "transparent" concept.

2000-04-07  Matt Loper  <matt@helixcode.com>

	* folder-browser.c (folder_browser_destroy): Unref the shell
	interface that we have a handle to.

	* folder-browser-factory.c (control_destroy_cb): New function;
	destroys a folder-browser when its control is destroyed.
	(folder_browser_factory): Hook up to the above.

2000-04-07  Dan Winship  <danw@helixcode.com>

	* mail-ops.c: new file, for toolbar/menu callbacks
	(fetch_mail): fetch mail. Doesn't do mbox locking. Many kludges.

	* folder-browser-factory.c (control_activate): use new fetch_mail
	function as the callback for the "New mail" icon. Rename check_cb
	to random_cb.

	* Makefile.am: don't build test-sources since the version in
	CVS doesn't do much and once I've fixed it it won't be a separate
	program. Add mail-ops.[ch].

2000-04-06  Miguel de Icaza  <miguel@gnu.org>

	* message-list.c: Stick pixmaps here.

	* mail-display.c (embeddable_destroy_cb): Replaced C++ comments
	with C comments.

	* message-list.c (load_internal_images): New function, loads images.
	(message_list_init_renderers): Load images, fix previous attempt