@@ -1,3 +1,9 @@
+2000-04-14  Dan Winship  <danw@helixcode.com>
+
+	* folder-browser-factory.c (development_warning): Fix up the
+	warning message a bit.
+	(folder_browser_factory): Make the warning bypassable.
+
 2000-04-12  Miguel de Icaza  <miguel@gnu.org>
 
 	* main.c (main): Call e_cursors_init.
